Comment out rule overflow:visible for .pluslet selector in admin_style.css stylesheet to avoid elements exceed the size of Guides configuration layout.

--- a/assets/css/admin/admin_styles.css
+++ b/assets/css/admin/admin_styles.css
@@ -1630,7 +1630,7 @@ li.fav-box-item:hover::before {color: #C03957;}
   width: -moz-calc(100% - 10px);
   width: -webkit-calc(100% - 10px);
   width: calc(100% - 10px);
-  overflow: visible;
+  /*overflow: visible;*/
   position: relative;
 }
 
